[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/SidePanel.gd" type="Script" id=1]
[ext_resource path="res://styles/theme.tres" type="Theme" id=2]
[ext_resource path="res://styles/grey_button_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://styles/yellow_button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://styles/TabButton.tres" type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.168627, 0.203922, 0.254902, 1 )
border_width_left = 18
border_width_top = 20
border_width_right = 18
border_width_bottom = 20
border_color = Color( 0.168627, 0.203922, 0.254902, 1 )
corner_radius_top_right = 12

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.886275, 0.886275, 0.886275, 1 )

[node name="SidePanel" type="PanelContainer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -518.0
margin_right = 178.0
rect_min_size = Vector2( 200, 0 )
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 18.0
margin_top = 20.0
margin_right = 182.0
margin_bottom = 498.0
custom_constants/separation = 12

[node name="TopButton" type="Button" parent="VBoxContainer"]
margin_right = 164.0
margin_bottom = 31.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0.207843, 0.207843, 0.207843, 1 )
custom_colors/font_color = Color( 0.207843, 0.207843, 0.207843, 1 )
custom_colors/font_color_hover = Color( 0.207843, 0.207843, 0.207843, 1 )
custom_colors/font_color_pressed = Color( 0.207843, 0.207843, 0.207843, 1 )
text = "ADD CUSTOM VERSION"

[node name="TabButtons" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 164.0
margin_bottom = 132.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projects" type="Button" parent="VBoxContainer/TabButtons"]
margin_right = 164.0
margin_bottom = 27.0
focus_mode = 0
theme = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.45098, 0.45098, 0.45098, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.921569, 0.921569, 1 )
custom_colors/font_color_pressed = Color( 0.921569, 0.921569, 0.921569, 1 )
toggle_mode = true
pressed = true
action_mode = 0
enabled_focus_mode = 0
group = SubResource( 2 )
text = "Projects"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Versions" type="Button" parent="VBoxContainer/TabButtons"]
margin_top = 31.0
margin_right = 164.0
margin_bottom = 58.0
focus_mode = 0
theme = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.45098, 0.45098, 0.45098, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.921569, 0.921569, 1 )
custom_colors/font_color_pressed = Color( 0.921569, 0.921569, 0.921569, 1 )
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
group = SubResource( 2 )
text = "Versions"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Templates" type="Button" parent="VBoxContainer/TabButtons"]
margin_top = 62.0
margin_right = 164.0
margin_bottom = 89.0
focus_mode = 0
theme = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.45098, 0.45098, 0.45098, 1 )
custom_colors/font_color_hover = Color( 0.921569, 0.921569, 0.921569, 1 )
custom_colors/font_color_pressed = Color( 0.921569, 0.921569, 0.921569, 1 )
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
group = SubResource( 2 )
text = "Templates"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 164.0
margin_bottom = 148.0
custom_styles/separator = SubResource( 3 )

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 164.0
margin_bottom = 292.0
custom_constants/separation = 8

[node name="Open" type="Button" parent="VBoxContainer/Buttons"]
margin_right = 164.0
margin_bottom = 27.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Open"

[node name="Import" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 35.0
margin_right = 164.0
margin_bottom = 62.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Import"

[node name="Scan" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 70.0
margin_right = 164.0
margin_bottom = 97.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Scan"

[node name="ShowFiles" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 105.0
margin_right = 164.0
margin_bottom = 132.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
text = "Show Files"
[connection signal="pressed" from="VBoxContainer/TabButtons/Projects" to="." method="_on_Projects_pressed"]
[connection signal="pressed" from="VBoxContainer/TabButtons/Versions" to="." method="_on_Versions_pressed"]
[connection signal="pressed" from="VBoxContainer/TabButtons/Templates" to="." method="_on_Templates_pressed"]
